fix code chunk horizontal scroll in small screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,8 +74,8 @@ pre code {
   border: 1px solid #ddd;
   box-shadow: 5px 5px 5px #eee;
   padding: 1em;
-  white-space:pre !important; /*new */
-  overflow-x:scroll !important; /*auto;*/
+  white-space:pre; /*new */
+  overflow-x:scroll; /*auto;*/
   line-height: 1.75;
 }
 
